@@ -1,5 +1,9 @@
 2010-06-23	Joel Sherrill <joel.sherrilL@OARcorp.com>
 
+	* libmisc/stackchk/check.c: More clean up and coverage improvements..
+
+2010-06-23	Joel Sherrill <joel.sherrilL@OARcorp.com>
+
 	* libmisc/stackchk/check.c: Clean up to improve coverage.
 
 2010-06-23	Chris Johns <chrisj@rtems.org>
